src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroup_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroup_StringErrorContext.class */
public final class GLXNVSwapGroup_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glXJoinSwapGroupNV(JJI)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("glXBindSwapBarrierNV(JII)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("nglXQuerySwapGroupNV(JJJJ)I", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("glXQuerySwapGroupNV(JJLjava/nio/IntBuffer;Ljava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("nglXQueryMaxSwapGroupsNV(JIJJ)I", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("glXQueryMaxSwapGroupsNV(JILjava/nio/IntBuffer;Ljava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("nglXQueryFrameCountNV(JIJ)I", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("glXQueryFrameCountNV(JILjava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("glXResetFrameCountNV(JI)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("glXQuerySwapGroupNV(JJ[I[I)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("glXQueryMaxSwapGroupsNV(JI[I[I)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        methods.put("glXQueryFrameCountNV(JI[I)Z", "net/labymod/core/laby3d/opengl/error/generated/GLXNVSwapGroupErrorContext");
        return methods;
    }
}
